@@ -1,0 +1,19 @@
+<html>
+<head>
+<title>Tapestry Tutorial</title>
+</head>
+<body>
+<h1>Tapestry Tutorial</h1>
+
+<p>Please select one of the following Tapestry applications from the tutorial:
+
+<ul>
+<li><a href="hello">Hello World</a>
+<li><a href="simple">Simple</a>
+<li><a href="adder">Adder</a>
+<li><a href="border">Border</a>
+<li><a href="survey">Survey</a>
+</ul>
+
+</body>
+</html>
