@@ -1,5 +1,9 @@
 * Nov 1 2000 hship
 
+Convert the Tutorial over to using Jetty.
+
+* Nov 1 2000 hship
+
 Remove dependecy on IBM's JLog toolkit (to be replaced with Log4J, which is open source).
 Remove references to PrimixFoundation.jar, which has been merged into Tapestry.jar.
 
